add test object POJO